// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smoke and snapshot tests renders first demonstration successfully 1`] = `
<DocumentFragment>
  <div
    class="sc-VigVT jWVJdr"
    width="75%"
  >
    <div
      class="sc-iwsKbI kaoNrj"
      width="auto"
    >
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI kvOfHz"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Green-eyed People: 20
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 100%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="20"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 100%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI kvOfHz"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Blue-eyed People: 10
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 47.368421052631575%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 47.368421052631575%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-iwsKbI QHnwj"
      width="auto"
    >
      <button
        class="sc-bxivhb llgjdL"
        color="white"
      >
        Start
      </button>
    </div>
    <div>
      <svg
        class="sc-gzVnrw jUuqtv"
        viewBox="0 0 900 500"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <clippath
            id="clip-path-simulation-0"
          >
            <rect
              height="500"
              width="900"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <g
          clip-path="url(#clip-path-simulation-0)"
        >
          <g>
            <rect
              fill="none"
              height="500"
              stroke="#BBBBBB"
              stroke-width="3"
              width="900"
              x="0"
              y="0"
            />
            <g />
          </g>
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`smoke and snapshot tests renders second demonstraction successfully 1`] = `
<DocumentFragment>
  <div
    class="sc-VigVT jWVJdr"
    width="75%"
  >
    <div
      class="sc-iwsKbI kaoNrj"
      width="auto"
    >
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI jCOwYA"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Green-eyed People: 20
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 100%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="20"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 100%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Green
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Blue
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI jCOwYA"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Blue-eyed People: 10
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 47.368421052631575%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 47.368421052631575%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Blue
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Green
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-iwsKbI QHnwj"
      width="auto"
    >
      <button
        class="sc-bxivhb llgjdL"
        color="white"
      >
        Start
      </button>
    </div>
    <div>
      <svg
        class="sc-gzVnrw jUuqtv"
        viewBox="0 0 900 500"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <clippath
            id="clip-path-simulation-1"
          >
            <rect
              height="500"
              width="900"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <g
          clip-path="url(#clip-path-simulation-1)"
        >
          <g>
            <rect
              fill="none"
              height="500"
              stroke="#BBBBBB"
              stroke-width="3"
              width="900"
              x="0"
              y="0"
            />
            <g />
          </g>
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`smoke and snapshot tests renders third demonstraction successfully 1`] = `
<DocumentFragment>
  <div
    class="sc-VigVT jWVJdr"
    width="75%"
  >
    <div
      class="sc-iwsKbI kaoNrj"
      width="auto"
    >
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI jCOwYA"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Green-eyed People: 20
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 100%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="20"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 100%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Green
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Blue
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV cfGHBl"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju gWmudL"
                      color="#91c7b1"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(82, 160, 129); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT imRwYN"
        width="50%"
      >
        <div
          class="sc-iwsKbI jCOwYA"
          width="auto"
        >
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                Number of Blue-eyed People: 10
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-user fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 47.368421052631575%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="20"
                    aria-valuemin="1"
                    aria-valuenow="10"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 47.368421052631575%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-users fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Blue
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
          <div
            class="sc-dVhcbM ecVKIK"
          >
            <div
              class="sc-bRBYWo gtDXeL"
            >
              <p
                class="sc-Rmtcm bImzes"
              >
                5% chance of harassment with Green
              </p>
              <section>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-smile fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
                <div
                  class="rc-slider sc-chPdSV gbhhpK"
                >
                  <div
                    class="rc-slider-rail"
                  />
                  <div
                    class="rc-slider-track"
                    style="left: 0%; width: 20%;"
                  />
                  <div
                    class="rc-slider-step"
                  />
                  <div
                    aria-disabled="false"
                    aria-valuemax="0.25"
                    aria-valuemin="0"
                    aria-valuenow="0.05"
                    class="rc-slider-handle"
                    role="slider"
                    style="left: 20%; transform: translateX(-50%);"
                    tabindex="0"
                  />
                  <div
                    class="rc-slider-mark"
                  />
                  <div
                    class="sc-iwsKbI gQUqIM"
                    width="auto"
                  >
                    <div
                      class="sc-jAaTju lmEvqd"
                      color="#c4edff"
                      offset="10"
                      width="6"
                    />
                    <div
                      class="sc-jAaTju kbZoje"
                      color="#e9e9e9"
                      offset="10"
                      width="6"
                    />
                  </div>
                </div>
                <p
                  class="sc-hzDkRC kxpnkL"
                >
                  <i
                    class="sc-gZMcBi dPNFn fas fa-frown fa-1x false"
                    disabled=""
                    style="color: rgb(94, 207, 255); opacity: 1;"
                  />
                </p>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-iwsKbI QHnwj"
      width="auto"
    >
      <button
        class="sc-bxivhb llgjdL"
        color="white"
      >
        Start
      </button>
    </div>
    <div>
      <svg
        class="sc-gzVnrw jUuqtv"
        viewBox="0 0 900 500"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <clippath
            id="clip-path-simulation-2"
          >
            <rect
              height="500"
              width="900"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <g
          clip-path="url(#clip-path-simulation-2)"
        >
          <g>
            <rect
              fill="none"
              height="500"
              stroke="#BBBBBB"
              stroke-width="3"
              width="900"
              x="0"
              y="0"
            />
            <g />
          </g>
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
